[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "astroutils"
version = "0.1.0"
description = "A python library with some astronomy utilities"
authors = [
    {name = "Corey Spohn", email = "corey.a.spohn@nasa.gov"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Home = "https://github.com/CoreySpohn/astroutils"
Source = "https://github.com/CoreySpohn/astroutils"
Tracker = "https://github.com/CoreySpohn/astroutils/issues"
