[metadata]
name = astroutils
version = 0.1.0
description = A python library with some astronomy utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Corey Spohn
author_email = corey.a.spohn@nasa.gov
url = https://github.com/CoreySpohn/astroutils
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
license_files = LICENSE

[options]
packages = find:
